// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading message component renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    delay={2000}
    duration={1000}
    flexibleHeight={true}
    infinite={false}
    minHeight={0}
    size={2}
    text="Loading"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <f1
          validate="Loading"
        >
          <styled.h6>
            Loading
          </styled.h6>
        </f1>,
        <Unknown
          delay={2000}
          duration={1000}
          infinite={false}
          isComplete={false}
          size={2}
        />,
      ],
      "flexibleHeight": true,
      "minHeight": 0,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "children": <styled.h6>
            Loading
          </styled.h6>,
          "validate": "Loading",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": "Loading",
          },
          "ref": null,
          "rendered": "Loading",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "delay": 2000,
          "duration": 1000,
          "infinite": false,
          "isComplete": false,
          "size": 2,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <f1
            validate="Loading"
          >
            <styled.h6>
              Loading
            </styled.h6>
          </f1>,
          <Unknown
            delay={2000}
            duration={1000}
            infinite={false}
            isComplete={false}
            size={2}
          />,
        ],
        "flexibleHeight": true,
        "minHeight": 0,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "children": <styled.h6>
              Loading
            </styled.h6>,
            "validate": "Loading",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": "Loading",
            },
            "ref": null,
            "rendered": "Loading",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "delay": 2000,
            "duration": 1000,
            "infinite": false,
            "isComplete": false,
            "size": 2,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Loading message component renders with default props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    delay={2000}
    duration={1000}
    size={2}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <f1
          validate=""
        >
          <styled.h6>
            
          </styled.h6>
        </f1>,
        <Unknown
          delay={2000}
          duration={1000}
          infinite={false}
          isComplete={false}
          size={2}
        />,
      ],
      "flexibleHeight": false,
      "minHeight": 0,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "children": <styled.h6>
            
          </styled.h6>,
          "validate": "",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": "",
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "delay": 2000,
          "duration": 1000,
          "infinite": false,
          "isComplete": false,
          "size": 2,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <f1
            validate=""
          >
            <styled.h6>
              
            </styled.h6>
          </f1>,
          <Unknown
            delay={2000}
            duration={1000}
            infinite={false}
            isComplete={false}
            size={2}
          />,
        ],
        "flexibleHeight": false,
        "minHeight": 0,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "children": <styled.h6>
              
            </styled.h6>,
            "validate": "",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": "",
            },
            "ref": null,
            "rendered": "",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "delay": 2000,
            "duration": 1000,
            "infinite": false,
            "isComplete": false,
            "size": 2,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
